cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificUserDefCheckNoParam.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  -------------------------------------------------------------
  (1/1) Function is a user-defined function without parameters.
  -------------------------------------------------------------
   * In the top-level scope of the specification:
     - func int INT_NO_PARAM_fifteen():
                ^
     - func bool EXT_NO_PARAM_f(): "java:somepkg.SomeClass.someMethod|.";
                 ^
   * In group "g":
     - func int INT_NO_PARAM_fifteen():
                ^
     - func bool EXT_NO_PARAM_f(): "java:somepkg.SomeClass.someMethod|.";
                 ^
